--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ code {
   width: 80px;
 }
 
+.wd-image-size-100-100 {
+  height: 100px;
+  width: 100px;
+}
+
 .wd-text-on-image {
   position: absolute;
   bottom: 8px;
@@ -42,6 +47,11 @@ code {
 .wd-nudge-bottom-left-7 {
   bottom: 7px;
   left:10px;
+}
+
+.wd-nudge-up-left {
+  top: 250px;
+  left: 50px;
 }
 
 .wd-float-left{
